--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
                     <div class="carousel-container">
                         <img src="project1-1.jpg" class="slide active">
                         <img src="project1-2.jpg" class="slide">
+                        <img src="project1-3.jpg" class="slide">
                         
                         <button class="prev" onclick="changeSlide('project-1', -1)">&#10094;</button>
                         <button class="next" onclick="changeSlide('project-1', 1)">&#10095;</button>
                     </div>
 
                     <div class="card-content">
-                        <span class="tech-stack">Python & Excel</span>
-                        <h3>Data Analysis Project</h3>
-                        <p>Analyzed a dataset of 5,000 retail sales to identify purchasing trends using Pandas.</p>
-                        <a href="#" class="project-link">View Code →</a>
+                        <span class="tech-stack">C# & Unity</span>
+                        <h3>Code Catchers</h3>
+                        <p>A Pokemon & Miscrit Inpired game that helps players experience a retro feeling while learning about coding at the same time</p>
+                        <a href="https://sites.google.com/view/mapa-corp/home" class="project-link">View Project→</a>
                     </div>
                 </div>
 
