--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 
                 <div class="card" id="project-1">
                     <div class="carousel-container">
-                        <img src="project1-1.jpg" class="slide active">
-                        <img src="project1-2.jpg" class="slide">
-                        <img src="project1-3.jpg" class="slide">
+                        <img src="project1-1.png" class="slide active">
+                        <img src="project1-2.png" class="slide">
+                        <img src="project1-3.png" class="slide">
                         
                         <button class="prev" onclick="changeSlide('project-1', -1)">&#10094;</button>
                         <button class="next" onclick="changeSlide('project-1', 1)">&#10095;</button>
