--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         section { margin-bottom: 60px; scroll-margin-top: 80px; }
         .section-title { font-size: 1.8rem; margin-bottom: 25px; border-left: 5px solid var(--primary); padding-left: 15px; }
 
-        /* --- CAROUSEL / SLIDESHOW STYLES (NEW!) --- */
+        /* --- CAROUSEL / SLIDESHOW STYLES --- */
         .project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
         .card { background: var(--bg-card); border-radius: 15px; box-shadow: var(--shadow); transition: background 0.3s, transform 0.3s; border: 1px solid rgba(255,255,255,0.1); overflow: hidden; }
         .card:hover { transform: translateY(-5px); }
@@ -78,11 +78,14 @@
         .carousel-container { position: relative; width: 100%; height: 200px; background: #ddd; overflow: hidden; }
         
         /* The Images */
-        .slide { width: 100%; height: 100%; object-fit: cover; display: none; }
+        .slide { 
+            width: 100%; height: 100%; object-fit: cover; display: none; 
+            cursor: zoom-in; /* NEW: Shows user they can click */
+        }
         .slide.active { display: block; }
 
         /* Next/Prev Buttons */
-        .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: white; border: none; padding: 10px; cursor: pointer; border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; transition: 0.2s; }
+        .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: white; border: none; padding: 10px; cursor: pointer; border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; transition: 0.2s; z-index: 10; }
         .prev:hover, .next:hover { background-color: rgba(0,0,0,0.8); }
         .prev { left: 10px; }
         .next { right: 10px; }
@@ -91,6 +94,57 @@
         .card-content { padding: 25px; }
         .tech-stack { display: inline-block; font-size: 0.8rem; font-weight: 600; background: rgba(79, 70, 229, 0.1); color: var(--primary); padding: 4px 12px; border-radius: 20px; margin-bottom: 10px; }
         .project-link { display: inline-block; margin-top: 15px; color: var(--primary); font-weight: 700; }
+
+        /* --- NEW: FULL SCREEN MODAL STYLES --- */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; 
+            z-index: 2000; /* Sit on top of navbar */
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgba(0,0,0,0.9); /* Black background with opacity */
+            justify-content: center;
+            align-items: center;
+            animation: fadeIn 0.3s;
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 900px;
+            max-height: 90vh;
+            object-fit: contain;
+            border-radius: 5px;
+            box-shadow: 0 0 20px rgba(255,255,255,0.1);
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 20px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+            z-index: 2001;
+        }
+
+        .close-modal:hover,
+        .close-modal:focus {
+            color: var(--primary);
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        @keyframes fadeIn {
+            from {opacity: 0} 
+            to {opacity: 1}
+        }
 
         /* --- FOOTER --- */
         .edu-item { background: var(--bg-card); padding: 20px; border-radius: 10px; border-left: 4px solid var(--text-muted); transition: background 0.3s; }
@@ -150,7 +204,7 @@
                     <div class="card-content">
                         <span class="tech-stack">C# & Unity</span>
                         <h3>Code Catchers</h3>
-                        <p>A Pokemon & Miscrit Inpired game that helps players experience a retro feeling while learning about coding at the same time</p>
+                        <p>A Pokemon & Miscrit Inspired game that helps players experience a retro feeling while learning about coding at the same time</p>
                         <a href="https://sites.google.com/view/mapa-corp/home" class="project-link">View Project→</a>
                     </div>
                 </div>
@@ -190,6 +244,11 @@
 
     </div>
 
+    <div id="imageModal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="fullImage">
+    </div>
+
     <script>
         // 1. DARK MODE LOGIC
         const toggleButton = document.getElementById('theme-toggle');
@@ -227,14 +286,37 @@
                     break;
                 }
             }
-
             slides[activeIndex].classList.remove('active');
-            
             let newIndex = activeIndex + direction;
             if (newIndex >= slides.length) newIndex = 0;
             if (newIndex < 0) newIndex = slides.length - 1;
-
             slides[newIndex].classList.add('active');
+        }
+
+        // 3. FULL SCREEN MODAL LOGIC (NEW!)
+        const modal = document.getElementById("imageModal");
+        const modalImg = document.getElementById("fullImage");
+        const closeBtn = document.getElementsByClassName("close-modal")[0];
+        const allSlides = document.querySelectorAll('.slide');
+
+        // Add Click Event to ALL slides
+        allSlides.forEach(img => {
+            img.addEventListener('click', function() {
+                modal.style.display = "flex"; // Show modal
+                modalImg.src = this.src;      // Set modal image to clicked image
+            });
+        });
+
+        // Close when clicking the "X"
+        closeBtn.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // Close when clicking outside the image (the background)
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
     </script>
 
