--- a/index.html
+++ b/index.html
@@ -213,16 +213,17 @@
                     <div class="carousel-container">
                         <img src="project2-1.jpg" class="slide active">
                         <img src="project2-2.jpg" class="slide">
+                        <img src="project2-3.jpg" class="slide">
                         
                         <button class="prev" onclick="changeSlide('project-2', -1)">&#10094;</button>
                         <button class="next" onclick="changeSlide('project-2', 1)">&#10095;</button>
                     </div>
 
                     <div class="card-content">
-                        <span class="tech-stack">HTML / CSS</span>
-                        <h3>Personal Portfolio</h3>
-                        <p>Designed and deployed a responsive personal website using GitHub Pages with Dark Mode.</p>
-                        <a href="#" class="project-link">View Code →</a>
+                        <span class="tech-stack">Vite + React & MYSQL</span>
+                        <h3>Stock Pro</h3>
+                        <p>Designed and deployed a responsive website that allows adding stocks and keeping track of users and how much stock is in the inventory </p>
+                        <a href="stock-pro-system.vercel.app" class="project-link">View Project →</a>
                     </div>
                 </div>
 
